# spintax-py

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
dist-review/: spintax_core-0.0.0-py3-none-any.whl
docs/: plan-p1.md  plan-p2.md  plan-p3.md  spec-python-port.md
src/spintax_core/: __init__.py  _analyze.py  _ast.py  _charclasses.py  _directives.py  _errors.py  _extract.py  _neutralize.py  _parser.py  _pipeline.py  _plurals.py  _postprocess.py  _render.py  _rng.py  _source.py  _validator.py
tests/: conftest.py  rng_strategy.py  test_analyze.py  test_ascii_parity.py  test_ast_walk.py  test_case_folding.py  test_charclass_tables.py  test_golden_corpus.py  test_include_and_config.py  test_make_rng.py  test_neutralize.py  test_packaging.py  test_parser_depth.py  test_parser_parity.py  test_plan_covers_corpus.py  test_postprocess_parity.py  test_postprocess_restore.py  test_render_contract.py  test_review_gaps.py  test_rng_strategy.py  test_source.py  test_terminators_and_body.py  test_validator_semantic.py  test_validator_structural.py
tests/data/: generate_parser_parity.cjs  generate_postprocess_parity.cjs  parser_parity.json  parser_parity_templates.json  postprocess_parity.json  postprocess_parity_cases.json
